styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Poppins", sans-serif;
}

html {
    scroll-behavior: smooth;
}

p {
    color: rgb(85, 85, 85);
}

nav ul li a {
    text-decoration: none;
    font-weight: 500;
    font-size: 1.1rem;
}

/* TRANSITION */

a, .btn {
    transition: all 0.3s ease;
}

/* DESKTOP NAVIGATION */

#desktop-nav, .nav-links {
    display: flex;
}

nav {
    justify-content: space-around;
    align-items: center;
    height: 17vh;
}

.nav-links {
    list-style: none;
    gap: 2.5rem;
    font-size: 1.5rem;
}

a {
    color: black;
    text-decoration: none;
    text-decoration-color: white;
}

.nav-links a:hover {
    color:gray;
    text-decoration: underline;
    text-underline-offset: 1rem;
}

.logo {
    font-size: 2rem;
    cursor: default;
}


/* HAMBURGER MENU */

#hamburger-nav {
    display: none;
}

.hamburger-menu {
    position: relative;
    display: inline-block;
    z-index: 1000;
}

.hamburger-icon {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 24px;
    width: 30px;
    cursor: pointer;
}

.hamburger-icon {
    margin: 10px 0;
}

a, .hamburger-icon {
    -webkit-tap-highlight-color: transparent;
}

.hamburger-icon span {
    width: 100%;
    height: 2.1px;
    background-color: black;
    transition: all 0.3s ease-in-out;
}

.menu-links {
    position: absolute;
    top: 100%;
    right: 0;
    background-color: white;
    width: fit-content;
    max-height: 0;
    overflow: hidden;
    transition: all 0.3s ease-in-out; 
}

.menu-links a {
    display: block;
    padding: 10px;
    text-align: center;
    font-size: 1.5rem;
    color: black;
    text-decoration: none;
    transition: all 0.3s ease;
}

.menu-links a:hover {
    background-color: rgb(226, 225, 225);
}

.menu-links a:active {
    background-color: lightgray;
}

.menu-links li {
    list-style: none;
}

.menu-links.open {
    max-height: 500px;
}

.hamburger-icon.open span:first-child {
    transform: rotate(45deg) translate(10px, 5px);
}

.hamburger-icon.open span:nth-child(2) {
    opacity: 0;
}

.hamburger-icon.open span:last-child {
    transform: rotate(-45deg) translate(10px, -5px);
}

.hamburger-icon span:first-child {
    transform: none;
}
.hamburger-icon span:first-child {
    opacity: 1;
}


/* SECTIONS */

section {
    padding-top: 4vh;
    box-sizing: border-box;
    min-height: fit-content;
    max-height: fit-content;
}

#profile {
    display: flex;
    justify-content: center;
    gap: 1rem;
    align-items: center;
    margin: auto 25%;
    height: 82vh;
}

.section__pic-container {
    justify-content: center;
    height: fit-content;
    width: fit-content;
    margin: auto 0;
}

.section__pic-container img {
    border-radius: 50%;
    overflow: hidden;
    object-fit: cover;
    width: 21.85rem;
    height: 21.85rem;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
    -webkit-user-drag: none;
    user-select: none;
}

.section__text {
    text-align: center;
}

.section__text p {
    font-weight: 600;
}

.section__text__p1 {
    padding-top: 2rem;
    text-align: center;
}

.title {
    font-size: 2.6rem;
    text-align: center;
}

/* ICONS */

#socials-container {
    align-items: center;
}

.icon {
    width: 1.8rem;
    height: 1.8rem;
    margin-top: 10px;
    margin-left: 10px;
    transition: transform 0.2s ease;
    -webkit-tap-highlight-color: transparent;
}

.social, .arrow {
    cursor: pointer;
}

.social:hover, .arrow:hover {
    transform: scale(1.095);
}

.social:active, .arrow:active {
    transform: scale(0.95);
}

/* BUTTONS */
.btn {
    display: inline-block;
    padding: 1rem;
    border-radius: 2rem;
    font-size: 1.1rem;
    cursor: pointer;
    text-align: center;
    text-decoration: none;
    -webkit-tap-highlight-color: transparent;
}

.btn-color-1, .btn-color-2 {
    margin-top: 0.75rem;
    border: rgb(53, 53, 53) 0.1rem solid;
}

.btn-color-1, .btn-color-2:hover {
    background-color: rgb(21, 21, 21);
    color: white;
}

.btn-color-1:active, .btn-color-2:active {
    transform: scale(0.97);
}

.btn-container {
    display: flex;
    gap: 1rem;
    justify-content: center;
    align-items: center;
}


/* ABOUT SECTION */

#about {
    position: relative;
}

.section-container  {
    position: relative;
    margin-bottom: 7rem;
}

.about-containers {
    display: flex;
    justify-content: center;
    gap: 4rem;
    margin-bottom: 2rem;
    margin-top: 4rem;
    width: 50%;
}

.about-details-container {
    display: flex;
    justify-content: center;
    text-align: center;
}

.arrow {
    position: absolute;
    right: 5rem;
    bottom: 20vh;
}

.details-container {
    align-content: center;
    padding: 1.5rem;
    flex: 1;
    background: white;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    text-align: center;
}

.text-container {
    width: 50%;
    text-align: center;
    margin: auto;
}


/* EXPERIENCE SECTION */

#experience {
    position: relative;
}

.experience-sub-title {
    color: rgb(65, 65, 65);
    margin-bottom: 2rem;
}

.experience-details-container {
    display: flex;
    justify-content: center;
}

.experience-containers {
    display: flex;
    gap: 4rem;
    margin-bottom: 2rem;
    margin-top: 4rem;
    max-width: 71.5%;
}

.article-container {
    display: flex;
    text-align: initial;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    gap: 2.5rem;
}

article {
    display: flex;
    width: 8rem;
    justify-content: space-around;
    gap: 0.5rem;
}

h3 {
    margin-top: 0.65rem;
    font-size: 1.1rem;
}

/* PROJECTS SECTION */

#projects {
    position: relative;
    padding-bottom: 5rem;
}

.projects-details-container {
    display: flex;
    align-items: center;
    justify-content: center; 
    margin-top: 2rem;
}

.project-img {
    -webkit-user-drag: none;
    user-select: none;
    max-width: 15rem;
    border-radius: 10%;
}

.project-title {
    margin-top: 1.5rem;
    margin-bottom: 1rem;
}

/* CONTACT SECTION */

#contact {
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 70vh;
}

.contact-info-upper-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    background: (250, 250, 250);
    margin: 4.3rem auto 2rem;
    padding: 0.5rem;
}


.contact-info-container {
    display: flex;
    align-items: center;
    justify-content: initial;
    gap: 0.5rem;
    margin: 0 0.5rem 0.5rem;
}

.email {
    margin-left: 6.5px;
    width: 2.23rem;
    height: 2.23rem;
}

.text-contact {
    margin-top: 0.62rem;
    font-size: larger;
}

.text-contact a:hover {
    color: rgb(101, 101, 101);;
}

/* FOOTER */

footer {
    height: 28vh;
    margin: 0 1rem;
}

.nav-links-container .nav-links {
    justify-content: center;
    align-items: center;
}

footer .nav-links a:hover {
    text-decoration: none;
}

.nav-links-container a {
    font-size: 1.45rem;
}

footer p {
    text-align: center;
}

